# geometric-algorithm-project

./: CMakeLists.txt  Field.cpp  Mesh.cpp  Mesh.h  Polygon.cpp  Polygon.h  Triangle.cpp  main.cpp
README/: Project Report.docx
ServersAndDrones/: CMakeLists.txt  Drone.cpp  Drone.h  Field.cpp  Field.h  FieldDraw.cpp  FieldDraw.h  Polygon.cpp  Polygon.h  Server.cpp  Server.h  Triangle.cpp  Triangle.h  Vector2D.cpp  Vector2D.h  determinant.cpp  determinant.h  main.cpp
ServersAndDrones/Data/: servers.txt
ServersAndDrones/Images/: drone100x100.tga  drone50x50.tga  dronesecond100x100.tga  server512x512.tga  wireless100x100.tga
ServersAndDrones/Textures/: drone_image.tga
